--- a/package.json
+++ b/package.json
@@ -11,15 +11,24 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^3.0.0-beta.0",
     "@angular/animations": "~10.0.0",
+    "@angular/cdk": "^10.2.7",
     "@angular/common": "~10.0.0",
     "@angular/compiler": "~10.0.0",
     "@angular/core": "~10.0.0",
     "@angular/forms": "~10.0.0",
+    "@angular/material": "^10.2.7",
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
+    "crypto-js": "^4.0.0",
+    "html2canvas": "^1.0.0-rc.7",
+    "jspdf": "^2.3.1",
+    "ngx-spinner": "^11.0.1",
+    "owl-ng": "^1.0.0-beta.19",
     "rxjs": "~6.5.5",
+    "sweetalert2": "^11.0.16",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
@@ -42,5 +51,8 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~3.9.5"
+  },
+  "browser": {
+    "crypto": false
   }
 }
