--- a/package.json
+++ b/package.json
@@ -18,13 +18,20 @@
     "@angular/compiler": "~10.0.0",
     "@angular/core": "~10.0.0",
     "@angular/forms": "~10.0.0",
+    "@angular/localize": "~10.0.0",
     "@angular/material": "^10.2.7",
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
+    "@angular/service-worker": "~10.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^8.0.4",
+    "@types/googlemaps": "^3.43.3",
+    "angularx-social-login": "^3.5.7",
+    "bootstrap": "^4.6.0",
     "crypto-js": "^4.0.0",
     "html2canvas": "^1.0.0-rc.7",
     "jspdf": "^2.3.1",
+    "ngx-bootstrap": "^6.2.0",
     "ngx-spinner": "^11.0.1",
     "owl-ng": "^1.0.0-beta.19",
     "rxjs": "~6.5.5",
