--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "heroku-postbuild": "ng build --aot -prod"
   },
   "private": true,
   "dependencies": {
@@ -29,11 +30,13 @@
     "angularx-social-login": "^3.5.7",
     "bootstrap": "^4.6.0",
     "crypto-js": "^4.0.0",
+    "express": "^4.17.1",
     "html2canvas": "^1.0.0-rc.7",
     "jspdf": "^2.3.1",
     "ngx-bootstrap": "^6.2.0",
     "ngx-spinner": "^11.0.1",
     "owl-ng": "^1.0.0-beta.19",
+    "path": "^0.12.7",
     "rxjs": "~6.5.5",
     "sweetalert2": "^11.0.16",
     "tslib": "^2.0.0",
@@ -43,10 +46,11 @@
     "@angular-devkit/build-angular": "~0.1000.0",
     "@angular/cli": "~10.0.0",
     "@angular/compiler-cli": "~10.0.0",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0-next.1",
+    "enhanced-resolve": "^3.3.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.0.0",
@@ -61,5 +65,9 @@
   },
   "browser": {
     "crypto": false
+  },
+  "engines": {
+    "node": "14.17.0",
+    "npm": "6.14.13"
   }
 }
