--- a/configuration.json
+++ b/configuration.json
@@ -1,4 +1,4 @@
 {
-    "url": "https://app-node-my.herokuapp.com/api/",
+    "url": "https://restaurant-node.onrender.com/api/",
     "secret_key":"myFirstA@P"
 }
