--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   "dependencies": {
     "@angular/animations": "~10.0.0",
     "@angular/cdk": "^10.2.7",
+    "@angular/cli": "~10.0.0",
     "@angular/common": "~10.0.0",
     "@angular/compiler": "~10.0.0",
-    "@angular/cli": "~10.0.0",
     "@angular/compiler-cli": "~10.0.0",
     "@angular/core": "~10.0.0",
     "@angular/forms": "~10.0.0",
@@ -35,14 +35,14 @@
     "html2canvas": "^1.0.0-rc.7",
     "jspdf": "^2.3.1",
     "ngx-bootstrap": "^6.2.0",
-    "ngx-spinner": "^11.0.1",
+    "ngx-spinner": "^10.0.1",
     "owl-ng": "^1.0.0-beta.19",
     "path": "^0.12.7",
     "rxjs": "~6.5.5",
     "sweetalert2": "^11.0.16",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.3",
-    "typescript": "~3.9.5"
+    "typescript": "~3.9.5",
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
     "@agm/core": "^3.0.0-beta.0",
@@ -52,13 +52,13 @@
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0-next.1",
     "enhanced-resolve": "^3.3.0",
-    "jasmine-core": "~3.5.0",
+    "jasmine-core": "^3.7.1",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.0.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~3.3.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine-html-reporter": "^1.7.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0"
@@ -67,7 +67,7 @@
     "crypto": false
   },
   "engines": {
-    "node": "14.17.0",
-    "npm": "6.14.13"
+    "node": "19.5.0",
+    "npm": "9.3.1"
   }
 }
